<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SchedaReperto">

    <TextView
        android:id="@+id/status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-smallcaps"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/scheda_reperto_label"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/titolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/status_message"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <ImageView
        android:id="@+id/immagine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titolo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/descrizShort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/immagine"
        android:layout_marginTop="48dp"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/autore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/descrizShort"
        android:layout_marginTop="36dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/autore"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/annoPubblicazione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tipo"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/dimensione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/annoPubblicazione"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dimensione"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/periodoStorico"
        tools:ignore="RtlHardcoded,RtlSymmetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/peso"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="18sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cultura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/periodoStorico"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/valore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cultura"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/proprietario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/valore"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:ignore="RtlHardcoded,RtlSymmetry" />


    <Button
        android:id="@+id/audioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/proprietario"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="18dp"
        android:onClick="contenutiAudio"
        android:text="@string/contenuti_audio" />

    <Button
        android:id="@+id/videoButton"
        tools:ignore="RtlHardcoded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/audioButton"
        android:onClick="contenutiVideo"
        android:text="@string/contenuti_video" />

    <Button
        android:id="@+id/audioDescrizioneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/videoButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="10dp"
        android:text="@string/audio_descrizione"
        tools:ignore="RtlHardcoded" />
    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/audioDescrizioneButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="26dp"
        android:text="@string/ferma_descrizione"
        tools:ignore="RtlHardcoded" />



</RelativeLayout>




</ScrollView>